# openmp-screensaver

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  main.cpp  mainParallel.cpp
image/: convertPoint.py  output.csv  requirements.txt
utils/: point.cpp  point.h
